<resources>
    <string name="host_list_name">My Hosts</string>

    <string name="hint_username">Username</string>
    <string name="hint_address">Address</string>
    <string name="hint_alias">Alias</string>
    <string name="hint_hostname">Hostname</string>
    <string name="hint_password">Password</string>
    <string name="text_save">SAVE</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">gshell</string>

    <string name="create_app_password">Set app password</string>
    <string name="action_delte_sign_in">Reset app</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="app_name">Hosts</string>
    <string name="action_add">Add host</string>
    <string name="action_delete">Delete host</string>
    <string name="host_label_str">Saved hosts:</string>
    <string name="alias">Alias:</string>
    <string name="aliasHint">Alias</string>
    <string name="username">Username</string>
    <string name="hostname">Hostname</string>
    <string name="password">Password</string>
    <string name="save">Save</string>

    <string name="host_delete">Delete hosts</string>
    <string name="title">Title</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="type_of_room">Type of room</string>
    <string name="single">Single</string>
    <string name="double_room">Double</string>
    <string name="extras">Extras</string>
    <string name="breakfast">Breakfast</string>
    <string name="dinner">Dinner</string>
    <string name="cleaning">Cleaning</string>
    <string name="extra_bed">Extra bed</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="year_format">dd/mm/yyyy</string>
    <string name="date_of_booking">Date of booking</string>
    <string name="address">Address</string>
    <string name="confirm_booking">Confirm booking</string>
    <string name="set_booking_date">Set booking date</string>


    <string-array name="titles">
        <item>Mr</item>
        <item>Mrs</item>
        <item>Ms</item>
        <item>Miss</item>
        <item>Master</item>
        <item>Sir</item>
        <item>Madam</item>
    </string-array>
    <string name="title_activity_host_delete">HostDeleteActivity</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
