<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/host_form_activity"
    tools:context="com.example.eduardo.gshell.HostFormActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">


    </android.support.design.widget.AppBarLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.bermotech.examples.databaseexample.MainActivity"
        android:fillViewport="true">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <TableRow
                style="@style/RowMargin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/FormTextMargin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alias"
                    android:id="@+id/textViewAlias" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/aliasEditText"
                    android:layout_weight="1"/>

            </TableRow>

            <TableRow
                style="@style/RowMargin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/FormTextMargin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:id="@+id/textViewUsername" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/usernameEditText"
                    android:layout_weight="1"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/FormTextMargin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hostname"
                    android:id="@+id/textViewHostname" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    android:id="@+id/hostnameEditText"
                    android:layout_weight="1" />
            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/FormTextMargin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:id="@+id/textViewPassword" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/passwordEditText"
                    android:layout_weight="1" />
            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/RowMargin">

                <Button
                    android:onClick="saveDetails"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:id="@+id/saveButton"
                    android:layout_weight="1" />
            </TableRow>

        </TableLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
